Changes since 1.3d: